# python-ctd

./: .appveyor.yml  .buildinfo  .doctr-files  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  appveyor.yml  ctd.html  genindex.html  github_deploy_key_pyoceans_python_ctd.enc  index.html  objects.inv  py-modindex.html  pyproject.toml  quick_intro-output.html  quick_intro-output.ipynb  quick_intro.html  requirements-dev.txt  requirements.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py
.binder/: environment.yml
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml  pip.yml  pypi.yml  test-conda.yml  tests.yml
_modules/: index.html
_modules/ctd/: plotting.html  processing.html  read.html
_sources/: ctd.rst.txt  index.rst.txt  quick_intro-output.ipynb.txt
_static/: documentation_options.js
ci/: before_install.sh
conda.recipe/: meta.yaml
ctd/: __init__.py  _version.py  core.py  ctd.py  extras.py  plotting.py  processing.py  read.py  utilities.py
ctd.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ctd/tests/: test_ctd.py  test_plotting.py  test_processing.py
ctd/tests/data/: C3_00005.edf  issue3prlabworks2.cnv
ctd/tests/data/CTD/: g01l02s01.ros  g01l02s04m.ros  g01l03s02.ros  g01l03s05.ros  g01l04s02.ros  g01l04s03m.ros  g01l04s04.ros  g01mcan03c.ros  g01mcan05c.ros  g01mcan06c.ros  issue3prlabworks1.cnv
dev/: .doctr-files  ctd.html  genindex.html  index.html  objects.inv  py-modindex.html  quick_intro.html  search.html  searchindex.js
dev/_modules/: index.html
dev/_modules/ctd/: plotting.html  processing.html  read.html
dev/_static/: documentation_options.js
docs/: Makefile
docs/source/: conf.py  index.rst
notebooks/: 00-basics.ipynb  00-plotting.ipynb  00-reading-data.ipynb  quick_intro.ipynb
notebooks/.ipynb_checkpoints/: 00-basics-checkpoint.ipynb  pandas_flavor_testing-checkpoint.ipynb
test/: test_ctd.py  test_plotting.py  test_processing.py
test/data/: XBT.EDF
test/data/CTD/: g01l01s01.ros  g01l01s02.ros  g01l02s03.ros  g01l03s04.ros  g01l04s05.ros  g01l05s01.ros  g01l05s03.ros  g01l06s01.ros  g01l06s02.ros  g01l06s04.ros  g01mcan01c.ros  g01mcan04c.ros
test/data/CTD/raw/: g01mcan05c.hex  g01mcan06c.hex
tests/: test_btl.py  test_ctd.py  test_plotting.py  test_processing.py  test_processing_real_data.py  test_read.py
tests/data/: C3_00005.edf  CTD-spiked-filtered.cnv.bz2  CTD-spiked-unfiltered.cnv.bz2  CTD_with_sigma_e00.cnv  XBT.EDF  XBT.EDF.bz2  castaway_data.csv  issue3prlabfails1.cnv  issue3prlabworks1.cnv  issue3prlabworks2.cnv  press-fails.cnv  press-pass-prDE.cnv  small.cnv.bz2
tests/data/CTD/: fixstation_hl_02.ros  g01l01s01.ros  g01l01s02.ros  g01l02s01.ros  g01l02s02.ros  g01l02s03.ros  g01l02s04m.ros  g01l02s05.ros  g01l03s01m-m2.ros  g01l03s02.ros  g01l03s03m.ros  g01l03s04.ros  g01l03s05.ros  g01l04s01.ros  g01l04s02.ros  g01l04s03m.ros  g01l04s04.ros  g01l04s05.ros  g01l04s06.ros  g01l05s01.ros  g01l05s02m.ros  g01l05s03.ros  g01l05s04m.ros  g01l05s05.ros  g01l06s01.ros  g01l06s02.ros  g01l06s03.ros  g01l06s04.ros  g01l06s05.ros  g01mcan01c.ros  g01mcan02c.ros  g01mcan03c.ros  g01mcan04c.ros  g01mcan05c.ros  g01mcan06c.ros  pe1234test.ros
tests/data/CTD/raw/: DatCnv.psa  g01.xmlcon  g01mcan03c.hex  g01mcan04c.hex  g01mcan05c.hex  g01mcan06c.hex  pe1234test.hex
tests/data/bl/: bottletest.bl
tests/data/btl/: MI18MHDR.btl  alt_bottletest.BTL  blank_line_header.btl  bottletest.btl  km1312_s51_c01_ctd059.btl
version-v1.0.0/: .doctr-files  genindex.html  index.html
version-v1.1.0/: .doctr-files  index.html  py-modindex.html  search.html  searchindex.js
version-v1.1.0/_modules/: index.html
version-v1.1.0/_modules/ctd/: plotting.html  read.html
