[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=41.2",
  "setuptools-scm",
  "wheel",
]

[project]
name = "ctd"
description = "Tools to load hydrographic data into pandas DataFrame"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Filipe Fernandes", email = "ocefpaf+ctd@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [
  "dependencies",
  "readme",
  "version",
]
urls.documentation = "https://pyoceans.github.io/python-ctd"
urls.homepage = "https://github.com/pyoceans/python-ctd"
urls.repository = "https://github.com/pyoceans/python-ctd"

[tool.setuptools]
packages = [
  "ctd",
]
include-package-data = true
license-files = [
  "LICENSE.txt",
]

[tool.setuptools.dynamic]
dependencies = { file = [
  "requirements.txt",
] }
readme = { file = "README.md", content-type = "text/markdown" }

[tool.setuptools_scm]
write_to = "ctd/_version.py"
write_to_template = "__version__ = '{version}'"
tag_regex = "^(?P<prefix>v)?(?P<version>[^\\+]+)(?P<suffix>.*)?$"

[tool.ruff]
target-version = "py39"
line-length = 80

lint.select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "F",   # flakes
  "I",   # import sorting
  "T20", # flake8-print
  "UP",  # upgrade
]
# [lint.per-file-ignores]
per-file-ignores."docs/source/conf.py" = [
  "E402", # Module level import not at top of file
  "A001", # builtin-variable-shadowing
]

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  "docs",
  "docs/*",
  "notebooks",
  "notebooks/*",
  "tests",
  "tests/*",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 95
exclude = [
  "docs",
  "tests",
]
verbose = 1
quiet = false
color = true
