[metadata]
name = ctd
description = Python interface for ERDDAP
author = Filipe Fernandes
author_email = ocefpaf@gmail.com
url = https://github.com/pyoceans/python-ctd
long_description_content_type = text/markdown
long_description = file: README.md
license = BSD-3-Clause
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
zip_safe = True
install_requires =
    gsw >=3.3.0
    matplotlib
    numpy
    pandas-flavor >=0.1.2
    pandas >=0.24.0
    scipy
python_requires = >=3.6
packages = find:

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
ignore = E203
