[metadata]
name = ctd
description = Tools to load hydrographic data into pandas DataFrame
author = Filipe Fernandes
author_email = ocefpaf@gmail.com
url = https://github.com/pyoceans/python-ctd
long_description_content_type = text/markdown
long_description = file: README.md
license = BSD-3-Clause
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
zip_safe = True
install_requires =
    chardet
    gsw >=3.3.0
    matplotlib
    numpy
    pandas >=0.24.0
    pandas-flavor >=0.1.2
    scipy
python_requires = >=3.6
packages = find:

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    .coveragerc
    docs
    docs/*
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 105
ignore = E203
